fix: private watchlist detail and word break when string is too long

--- a/src/public/css/catalog-detail.css
+++ b/src/public/css/catalog-detail.css
@@ -20,6 +20,11 @@
     margin: 0 12px;
 }
 
+.catalog-detail-content h2 {
+    width: 100%;
+    overflow-wrap: break-word;
+}
+
 .catalog-trailer {
     width: 80%;
     max-width: 600px;
